# hypr-typr

./: PROCESS.txt  README.md  install.sh  pyproject.toml
src/hypr_typr/: __main__.py  config.py  engine.py  humanizer.py  tui.py
